# lazygitlab

./: .gitignore  CALUDE.md  README.md  lazygitlab.spec  pyproject.toml
.claude/skills/lint/: SKILL.md
.claude/skills/tdd/: SKILL.md
.claude/skills/test/: SKILL.md
aidlc-docs/: aidlc-state.md  audit.md
aidlc-docs/construction/plans/: gitlab-api-services-code-generation-plan.md  gitlab-api-services-functional-design-plan.md  gitlab-api-services-nfr-requirements-plan.md  infrastructure-code-generation-plan.md  infrastructure-functional-design-plan.md  infrastructure-nfr-requirements-plan.md  tui-application-code-generation-plan.md  tui-application-functional-design-plan.md  tui-application-nfr-requirements-plan.md
aidlc-docs/inception/application-design/: application-design.md  component-dependency.md  component-methods.md  components.md  services.md  unit-of-work-dependency.md  unit-of-work-story-map.md  unit-of-work.md
aidlc-docs/inception/plans/: application-design-plan.md  execution-plan.md  unit-of-work-plan.md
aidlc-docs/inception/requirements/: requirement-verification-questions.md  requirements.md
docs/superpowers/plans/: 2026-04-05-key-binding-wrap-sbs-scroll.md  2026-04-11-content-panel-refactoring.md  (+1 more)
lazygitlab/: __init__.py  __main__.py  models.py
lazygitlab/infrastructure/: __init__.py  config.py  git_detector.py  git_ops.py  logger.py
lazygitlab/services/: __init__.py  cache.py  comment_service.py  exceptions.py  gitlab_client.py  mr_service.py  types.py
lazygitlab/tui/: __init__.py  app.py  entities.py  messages.py  styles.tcss
(+60 files in other folders)
